--- a/competitive-data-science-predict-future-sales/01.ipynb
+++ b/competitive-data-science-predict-future-sales/01.ipynb
@@ -4,15 +4,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +108,7 @@
        "4        Волжский ТЦ \"Волга Молл\"        4"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +199,7 @@
        "4                40  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +277,7 @@
        "4         Аксессуары - PSP                 4"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +379,7 @@
        "4  15.01.2013               0       25     2555     1099.00           1.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +463,7 @@
        "4   4        5     5268"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +541,7 @@
        "4   4             0.5"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +668,7 @@
        "4               0        0       51       128.5           2.0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +741,7 @@
        "2810654           1.0  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,9 +799,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "# 进行特征向量化\n",
     "from sklearn.feature_extraction import DictVectorizer\n",
@@ -798,67 +822,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.fit_transform(X_test)"
+    "X_test = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_train, Y_train, test_size=0.1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
-       "             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n",
-       "             max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-       "             min_impurity_split=None, min_samples_leaf=1,\n",
-       "             min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "             n_estimators=100, presort='auto', random_state=None,\n",
-       "             subsample=1.0, verbose=0, warm_start=False)"
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "rfr = GradientBoostingRegressor()\n",
+    "\n",
+    "# rfr = GradientBoostingRegressor()\n",
+    "rfr = RandomForestRegressor()\n",
     "rfr.fit(X_train, Y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfr_y_predict = rfr.predict(X_test)"
+    "y_pred = rfr.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfr_submission = pd.DataFrame({'ID':test_df['ID'], 'item_cnt_month': rfr_y_predict})\n"
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.483849797445754"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(mean_squared_error(y_pred, Y_test))"
    ]
   },
   {
@@ -961,6 +1007,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rfr_y_predict = rfr.predict(X_test)\n",
+    "rfr_submission = pd.DataFrame({'ID':test_df['ID'], 'item_cnt_month': rfr_y_predict})\n",
     "rfr_submission['item_cnt_month'] = np.floor(rfr_submission['item_cnt_month'])"
    ]
   },
