--- a/recommend-system/03-RecSys.ipynb
+++ b/recommend-system/03-RecSys.ipynb
@@ -8,15 +8,536 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "根据用户的喜好推荐相关的项目， 有历史记录来决定\n",
+    "主要的技术：\n",
+    "协同过滤：该方法通过收集多个用户的偏好或偏好信息(协作)来自动预测(过滤)用户的兴趣。\n",
+    "基于内容的过滤：此方法仅使用用户之前的描述和信息，推荐类似的项目。特备的，将各种候选项与用户先前评分进行比较，推荐最佳匹配项。\n",
+    "混合方法：以上两种方法的结合，比单纯的一种方法要好。尤其适合解决一些常见的问题，比如冷启动和稀疏问题。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 展示如何实现上述三种方法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "import random\n",
+    "import sklearn\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from scipy.sparse.linalg import svds\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 加载数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "articles_df = pd.read_csv('./datasets/shared_articles.csv')\n",
+    "articles_df = articles_df[articles_df['eventType'] == 'CONTENT SHARED']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>eventType</th>\n",
+       "      <th>contentId</th>\n",
+       "      <th>authorPersonId</th>\n",
+       "      <th>authorSessionId</th>\n",
+       "      <th>authorUserAgent</th>\n",
+       "      <th>authorRegion</th>\n",
+       "      <th>authorCountry</th>\n",
+       "      <th>contentType</th>\n",
+       "      <th>url</th>\n",
+       "      <th>title</th>\n",
+       "      <th>text</th>\n",
+       "      <th>lang</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1459193988</td>\n",
+       "      <td>CONTENT SHARED</td>\n",
+       "      <td>-4110354420726924665</td>\n",
+       "      <td>4340306774493623681</td>\n",
+       "      <td>8940341205206233829</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HTML</td>\n",
+       "      <td>http://www.nytimes.com/2016/03/28/business/dea...</td>\n",
+       "      <td>Ethereum, a Virtual Currency, Enables Transact...</td>\n",
+       "      <td>All of this work is still very early. The firs...</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1459194146</td>\n",
+       "      <td>CONTENT SHARED</td>\n",
+       "      <td>-7292285110016212249</td>\n",
+       "      <td>4340306774493623681</td>\n",
+       "      <td>8940341205206233829</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HTML</td>\n",
+       "      <td>http://cointelegraph.com/news/bitcoin-future-w...</td>\n",
+       "      <td>Bitcoin Future: When GBPcoin of Branson Wins O...</td>\n",
+       "      <td>The alarm clock wakes me at 8:00 with stream o...</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1459194474</td>\n",
+       "      <td>CONTENT SHARED</td>\n",
+       "      <td>-6151852268067518688</td>\n",
+       "      <td>3891637997717104548</td>\n",
+       "      <td>-1457532940883382585</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HTML</td>\n",
+       "      <td>https://cloudplatform.googleblog.com/2016/03/G...</td>\n",
+       "      <td>Google Data Center 360° Tour</td>\n",
+       "      <td>We're excited to share the Google Data Center ...</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1459194497</td>\n",
+       "      <td>CONTENT SHARED</td>\n",
+       "      <td>2448026894306402386</td>\n",
+       "      <td>4340306774493623681</td>\n",
+       "      <td>8940341205206233829</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HTML</td>\n",
+       "      <td>https://bitcoinmagazine.com/articles/ibm-wants...</td>\n",
+       "      <td>IBM Wants to \"Evolve the Internet\" With Blockc...</td>\n",
+       "      <td>The Aite Group projects the blockchain market ...</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1459194522</td>\n",
+       "      <td>CONTENT SHARED</td>\n",
+       "      <td>-2826566343807132236</td>\n",
+       "      <td>4340306774493623681</td>\n",
+       "      <td>8940341205206233829</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HTML</td>\n",
+       "      <td>http://www.coindesk.com/ieee-blockchain-oxford...</td>\n",
+       "      <td>IEEE to Talk Blockchain at Cloud Computing Oxf...</td>\n",
+       "      <td>One of the largest and oldest organizations fo...</td>\n",
+       "      <td>en</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    timestamp       eventType            contentId       authorPersonId  \\\n",
+       "1  1459193988  CONTENT SHARED -4110354420726924665  4340306774493623681   \n",
+       "2  1459194146  CONTENT SHARED -7292285110016212249  4340306774493623681   \n",
+       "3  1459194474  CONTENT SHARED -6151852268067518688  3891637997717104548   \n",
+       "4  1459194497  CONTENT SHARED  2448026894306402386  4340306774493623681   \n",
+       "5  1459194522  CONTENT SHARED -2826566343807132236  4340306774493623681   \n",
+       "\n",
+       "       authorSessionId authorUserAgent authorRegion authorCountry contentType  \\\n",
+       "1  8940341205206233829             NaN          NaN           NaN        HTML   \n",
+       "2  8940341205206233829             NaN          NaN           NaN        HTML   \n",
+       "3 -1457532940883382585             NaN          NaN           NaN        HTML   \n",
+       "4  8940341205206233829             NaN          NaN           NaN        HTML   \n",
+       "5  8940341205206233829             NaN          NaN           NaN        HTML   \n",
+       "\n",
+       "                                                 url  \\\n",
+       "1  http://www.nytimes.com/2016/03/28/business/dea...   \n",
+       "2  http://cointelegraph.com/news/bitcoin-future-w...   \n",
+       "3  https://cloudplatform.googleblog.com/2016/03/G...   \n",
+       "4  https://bitcoinmagazine.com/articles/ibm-wants...   \n",
+       "5  http://www.coindesk.com/ieee-blockchain-oxford...   \n",
+       "\n",
+       "                                               title  \\\n",
+       "1  Ethereum, a Virtual Currency, Enables Transact...   \n",
+       "2  Bitcoin Future: When GBPcoin of Branson Wins O...   \n",
+       "3                       Google Data Center 360° Tour   \n",
+       "4  IBM Wants to \"Evolve the Internet\" With Blockc...   \n",
+       "5  IEEE to Talk Blockchain at Cloud Computing Oxf...   \n",
+       "\n",
+       "                                                text lang  \n",
+       "1  All of this work is still very early. The firs...   en  \n",
+       "2  The alarm clock wakes me at 8:00 with stream o...   en  \n",
+       "3  We're excited to share the Google Data Center ...   en  \n",
+       "4  The Aite Group projects the blockchain market ...   en  \n",
+       "5  One of the largest and oldest organizations fo...   en  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "articles_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>eventType</th>\n",
+       "      <th>contentId</th>\n",
+       "      <th>personId</th>\n",
+       "      <th>sessionId</th>\n",
+       "      <th>userAgent</th>\n",
+       "      <th>userRegion</th>\n",
+       "      <th>userCountry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1465413032</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>-3499919498720038879</td>\n",
+       "      <td>-8845298781299428018</td>\n",
+       "      <td>1264196770339959068</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1465412560</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>8890720798209849691</td>\n",
+       "      <td>-1032019229384696495</td>\n",
+       "      <td>3621737643587579081</td>\n",
+       "      <td>Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_2...</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1465416190</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>310515487419366995</td>\n",
+       "      <td>-1130272294246983140</td>\n",
+       "      <td>2631864456530402479</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1465413895</td>\n",
+       "      <td>FOLLOW</td>\n",
+       "      <td>310515487419366995</td>\n",
+       "      <td>344280948527967603</td>\n",
+       "      <td>-3167637573980064150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1465412290</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>-7820640624231356730</td>\n",
+       "      <td>-445337111692715325</td>\n",
+       "      <td>5611481178424124714</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1465413742</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>310515487419366995</td>\n",
+       "      <td>-8763398617720485024</td>\n",
+       "      <td>1395789369402380392</td>\n",
+       "      <td>Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebK...</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>BR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1465415950</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>-8864073373672512525</td>\n",
+       "      <td>3609194402293569455</td>\n",
+       "      <td>1143207167886864524</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1465415066</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>-1492913151930215984</td>\n",
+       "      <td>4254153380739593270</td>\n",
+       "      <td>8743229464706506141</td>\n",
+       "      <td>Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/53...</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>BR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1465413762</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>310515487419366995</td>\n",
+       "      <td>344280948527967603</td>\n",
+       "      <td>-3167637573980064150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1465413771</td>\n",
+       "      <td>VIEW</td>\n",
+       "      <td>3064370296170038610</td>\n",
+       "      <td>3609194402293569455</td>\n",
+       "      <td>1143207167886864524</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    timestamp eventType            contentId             personId  \\\n",
+       "0  1465413032      VIEW -3499919498720038879 -8845298781299428018   \n",
+       "1  1465412560      VIEW  8890720798209849691 -1032019229384696495   \n",
+       "2  1465416190      VIEW   310515487419366995 -1130272294246983140   \n",
+       "3  1465413895    FOLLOW   310515487419366995   344280948527967603   \n",
+       "4  1465412290      VIEW -7820640624231356730  -445337111692715325   \n",
+       "5  1465413742      VIEW   310515487419366995 -8763398617720485024   \n",
+       "6  1465415950      VIEW -8864073373672512525  3609194402293569455   \n",
+       "7  1465415066      VIEW -1492913151930215984  4254153380739593270   \n",
+       "8  1465413762      VIEW   310515487419366995   344280948527967603   \n",
+       "9  1465413771      VIEW  3064370296170038610  3609194402293569455   \n",
+       "\n",
+       "             sessionId                                          userAgent  \\\n",
+       "0  1264196770339959068                                                NaN   \n",
+       "1  3621737643587579081  Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_2...   \n",
+       "2  2631864456530402479                                                NaN   \n",
+       "3 -3167637573980064150                                                NaN   \n",
+       "4  5611481178424124714                                                NaN   \n",
+       "5  1395789369402380392  Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebK...   \n",
+       "6  1143207167886864524                                                NaN   \n",
+       "7  8743229464706506141  Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/53...   \n",
+       "8 -3167637573980064150                                                NaN   \n",
+       "9  1143207167886864524                                                NaN   \n",
+       "\n",
+       "  userRegion userCountry  \n",
+       "0        NaN         NaN  \n",
+       "1         NY          US  \n",
+       "2        NaN         NaN  \n",
+       "3        NaN         NaN  \n",
+       "4        NaN         NaN  \n",
+       "5         MG          BR  \n",
+       "6        NaN         NaN  \n",
+       "7         SP          BR  \n",
+       "8        NaN         NaN  \n",
+       "9        NaN         NaN  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interactions_df = pd.read_csv('./datasets/users_interactions.csv')\n",
+    "interactions_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 数据清理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 根据事件类型表示兴趣程度，比如comment 是最感兴趣的\n",
+    "event_type_strength = {\n",
+    "    'VIEW':1.0,\n",
+    "    'LIKE':2.0,\n",
+    "    'BOOKMARK':2.5,\n",
+    "    'FOLLOW':3.0,\n",
+    "    'COMMENT CREATED':4.0\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interactions_df['eventStrength'] = interactions_df['eventType'].apply(lambda x: \n",
+    "                                                                      event_type_strength[x])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "推荐系统的冷启动：对缺少足够信息的新用户难以做出个性化的推荐。  \n",
+    "因为这个原因，只保留至少有5次交互的用户信息。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users_interactions_count_df = interactions_df.groupby(['personId', 'contentId']).size().groupby('personId').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# user: 1895\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 针对不同用户的交互进行分组统计\n",
+    "print(\"# user: %d\" % len(users_interactions_count_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 选择大于5的用户\n",
+    "user_with_enough_interactions_df = user_interactions_count_df[\n",
+    "    user_interactions_count_df >= 5].reset_index()[['personId']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1311, 1)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_with_enough_interactions_df.shape  #还有1311个用户"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "根据用户的喜好推荐相关的项目， 有历史记录来决定\n",
-    "主要的技术：\n",
-    "协同过滤：该方法通过收集多个用户的偏好或偏好信息(协作)来自动预测(过滤)用户的兴趣。"
-   ]
+   "source": []
   }
  ],
  "metadata": {
