update counvec tf-idfvec

--- a/experimental/02.ipynb
+++ b/experimental/02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,29 +16,78 @@
    ],
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<2x6 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 8 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "l = range(5)"
+    "str_list = np.array(['she love this this book', 'she like this movie'])\n",
+    "count_vec = CountVectorizer(stop_words=None)\n",
+    "a = count_vec.fit_transform(str_list)\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 0)\t1\n",
+      "  (0, 5)\t2\n",
+      "  (0, 2)\t1\n",
+      "  (0, 4)\t1\n",
+      "  (0, 3)\t1\n",
+      "  (0, 1)\t1\n",
+      "  (0, 5)\t1\n",
+      "  (0, 4)\t1\n"
+     ]
+    }
+   ],
    "source": [
-    "a = pd.DataFrame({\n",
-    "    \"num\":l,\n",
-    "    \"num2\":l\n",
-    "})"
+    "for i in a:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'book': 0, 'like': 1, 'love': 2, 'movie': 3, 'she': 4, 'this': 5}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_vec.vocabulary_"
    ]
   },
   {
@@ -50,66 +99,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dictv = DictVectorizer(sparse=False)"
+    "tfidf=TfidfVectorizer()\n",
+    "b = tfidf.fit_transform(str_list)\n",
+    "weight = b.toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = dictv.fit_transform(a.to_dict(orient='record'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0., 0.],\n",
-       "       [1., 1.],\n",
-       "       [2., 2.],\n",
-       "       [3., 3.],\n",
-       "       [4., 4.]])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot convert the series to <class 'int'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-04f1254da28f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'num'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'num'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    110\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mconverter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m         raise TypeError(\"cannot convert the series to \"\n\u001b[0;32m--> 112\u001b[0;31m                         \"{0}\".format(str(converter)))\n\u001b[0m\u001b[1;32m    113\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot convert the series to <class 'int'>"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 4)\t0.33425073008815387\n",
+      "  (0, 2)\t0.46977773849858007\n",
+      "  (0, 5)\t0.6685014601763077\n",
+      "  (0, 0)\t0.46977773849858007\n",
+      "  (0, 4)\t0.40993714596036396\n",
+      "  (0, 5)\t0.40993714596036396\n",
+      "  (0, 1)\t0.5761523551647353\n",
+      "  (0, 3)\t0.5761523551647353\n"
      ]
     }
    ],
    "source": [
-    "a['num'] = (a['num'])"
+    "for i in b:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word = tfidf.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---输出第 0 类文本的tf-idf权重\n",
+      "book 0.46977773849858007\n",
+      "like 0.0\n",
+      "love 0.46977773849858007\n",
+      "movie 0.0\n",
+      "she 0.33425073008815387\n",
+      "this 0.6685014601763077\n",
+      "---输出第 1 类文本的tf-idf权重\n",
+      "book 0.0\n",
+      "like 0.5761523551647353\n",
+      "love 0.0\n",
+      "movie 0.5761523551647353\n",
+      "she 0.40993714596036396\n",
+      "this 0.40993714596036396\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(weight)):\n",
+    "    print('---输出第', i, '类文本的tf-idf权重')\n",
+    "    for j in range(len(word)):\n",
+    "        print(word[j], weight[i][j])"
    ]
   },
   {
